# rnnoise

./: CMakeLists.txt
src/: celt_lpc.c  pitch.c
